[package]
name = "video-downloader"
version = "0.1.0"
edition = "2021"
authors = ["Video Downloader Team"]
description = "A desktop video downloader application"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
indicatif = "0.17"
anyhow = "1.0"
url = "2.5"
dialoguer = "0.11"
which = "5.0"
colored = "2.1"
dirs = "5.0"
gtk4 = "0.7"
libadwaita = "0.5"
relm4 = { version = "0.7", features = ["macros", "libadwaita"] }
relm4-components = "0.7"
async-channel = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
glib-build-tools = "0.18"
